# ats

./: .dockerignore  .env.hf_space.example  .gitattributes  .gitignore  BENCHMARK.md  BLOG.md  BRANCH_POLICY.md  Dockerfile  ISSUE_CLOSURE_LEDGER.md  OpenEnv_Hackathon_Complete_Guide.docx  README.md  __init__.py  alurm_runner.sbatch  atc_colab_adapt.ipynb  constants.py  engine.py  generate_doc.py  graders.py  imports.py  inference.py  models.py  openenv.yaml  planner.py  preview_ui.py  pyproject.toml  tasks.py  test_groq_inference.py
.claude/: settings.local.json
atc_env/: __init__.py  client.py  models.py
domains/: __init__.py  icu.py
multi_agent/: __init__.py  adapt.py  environment.py  generator.py  inference.py  models.py  supervisor.py  visual_events.py
results/: benchmark_scores.json
scripts/: benchmark_models.py  check_release_hygiene.sh  deploy_hf_space.py  pre_submission_validate.sh  run_graders.py  smoke_reward_validation.py  validate-submission.sh
server/: app.py  atc_environment.py  demo_tasks.py  ui_console.html
space_frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/: test_adapt.py  test_client_and_metadata_contract.py  test_constants_invariants.py  test_env.py  test_env_integration_contract.py  test_grader_contract.py  test_inference_contract.py  test_multi_agent.py  test_sft_schema.py
training/: HF_TRAINING.md  __init__.py  atc_colab_kaggle.ipynb  atc_colab_sft_grpo_medium.ipynb  atc_multiagent_colab.ipynb  build_sft_dataset.py  colab_train.py  dataset.py  eval.py  hf_train.py  plot_rewards.py  reward_functions.py  (+5 more)
(+23 files in other folders)
